--- a/css/style.css
+++ b/css/style.css
@@ -445,7 +445,8 @@ a {
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%) rotate(-180deg);
-        transition: .3s all ease; }
+        transition: .3s all ease;
+        padding: 20px; }
       .site-mobile-menu .site-nav-wrap .arrow-collapse.collapsed:before {
         transform: translate(-50%, -50%); }
     .site-mobile-menu .site-nav-wrap > li {
@@ -507,6 +508,9 @@ a {
     font-weight: normal;
     letter-spacing: .1em;
     text-transform: uppercase; }
+    @media (max-width: 767.98px) {
+      .site-blocks-cover h1 {
+        font-size: 3rem; } }
   .site-blocks-cover p {
     color: #fff;
     font-size: 1.5rem;
