--- a/src/scss/_site-navbar.scss
+++ b/src/scss/_site-navbar.scss
@@ -311,6 +311,7 @@
 				left: 50%;
 				transform: translate(-50%, -50%) rotate(-180deg);
 				transition: .3s all ease;
+				padding: 20px;
 			}
 			&.collapsed {
 				&:before {
