--- a/src/scss/_site-base.scss
+++ b/src/scss/_site-base.scss
@@ -21,6 +21,13 @@ body {
 h1, h2, h3, h4, h5, h6 {
 	font-family: 'Oswald', sans-serif;
 }
+h2 {
+	margin-top: 2.5rem;
+}
+h3 {
+	margin-top: 2rem;
+	font-size: 1.6rem;
+}
 a {
 	transition: .3s all ease;
 	&:hover {
@@ -136,14 +143,7 @@ a {
 }
 
 .site-section {
-	padding: 3em 0;
-	@include media-breakpoint-up(md) {
-		padding: 7em 0;
-	}
-
-	&.site-section-sm {
-		padding: 4em 0;
-	}
+	padding: 4em 0;
 }
 
 
