Switch to webp as image format when available

--- a/src/scss/_site-blocks.scss
+++ b/src/scss/_site-blocks.scss
@@ -25,6 +25,14 @@
 			height: calc(30vh);		
 		}
 	}
+	img {
+		object-fit: cover;
+		object-position: top;
+		height: 100%;
+		width: 100%;
+		position: absolute;
+		z-index: -1;
+	}
 	.sub-text {
 		font-size: $font-size-base + .1rem;	
 		text-transform: uppercase;
