--- a/src/fonts/bootstrap-icons/bootstrap-icons.css
+++ b/src/fonts/bootstrap-icons/bootstrap-icons.css
@@ -2,6 +2,7 @@
   font-family: "bootstrap-icons";
   src: url("fonts/bootstrap-icons.woff?052ad648d829c462d284477c1ceb645d") format("woff"),
 url("fonts/bootstrap-icons.woff2?052ad648d829c462d284477c1ceb645d") format("woff2");
+  font-display: swap;
 }
 
 [class^="bi-"]::before,
