--- a/src/scss/_site-blocks.scss
+++ b/src/scss/_site-blocks.scss
@@ -1547,19 +1547,38 @@ figure {
 .featured-property-half {
 	position: relative;
 	background: $white;
-	margin-top: -100px;
-	box-shadow: 0 0 20px -5px rgba($black, .1);
-	div {
-		// width: 50%;
+	box-shadow: 0px 0px 10px 5px rgba($black, .1);
+
+	margin-top: 20px;
+	&.first {
+		margin-top: -100px;
 	}
-	.image {
-		background-size: cover;
-		background-position: center center;
-		background-repeat: no-repeat;
-		min-height: 300px;
+
+	@include media-breakpoint-down(sm) {
+		margin-left: -5px;
+		margin-right: -5px;
 	}
+	
+	.picture {
+		padding: 0;
+	}
+
+	img {
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+	}
+	
 	.text {
-		padding: 100px;
+		padding: 6%;
+		@include media-breakpoint-down(sm) {
+			padding: 1.5em;
+		}
+
+		h2 {
+			margin-top: 0;
+		}
+		
 		ul {
 			padding: 0;
 			margin: 0;
